<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ChatClient</string>
    <string name="action_settings">Settings</string>
    <string name="hello">Hello world, ChatClientActivity!</string>
	<string name="username">用户名</string>
    <string name="ip">服务器IP：</string>
	<string name="login">进入</string>
    <string name="leave">退出</string>
	<string name="send">发送</string>
    
</resources>
